# Multistrand nucleic acid kinetic simulator
# Copyright (c) 2008-2024 California Institute of Technology. All rights reserved.
# The Multistrand Team (help@multistrand.org)

# package ======================================================================

[metadata]
name = multistrand
version = 2.2
author = The Multistrand Team
author_email = help@multistrand.org
maintainer = Jake Kaslewicz, Boyan Beronov
maintainer_email = kasle001@umn.edu, beronov@cs.ubc.ca
description = Multistrand nucleic acid kinetic simulator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = RNA DNA chemical kinetics CTMC MJP Gillespie kinetic Monte Carlo simulator
url = http://www.multistrand.org
project_urls =
    Documentation = http://www.multistrand.org
    Source Code = https://github.com/DNA-and-Natural-Algorithms-Group/multistrand
    Issue Tracker = https://github.com/DNA-and-Natural-Algorithms-Group/multistrand/issues
platforms = all
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

[options]
install_requires =
    nupack >= 4.0.1
    numpy >= 1.24
    scipy >= 1.10
    multiprocess >= 0.70.15
python_requires = >=3.9
packages =
    multistrand
    multistrand._options
    multistrand._options.parameters
    multistrand._objects
    multistrand.utils
package_dir =
    multistrand = src/interface
include_package_data = true
zip_safe = false

[options.package_data]
multistrand._options.parameters = *.csv

[options.extras_require]
mfpt =
    scikit-umfpack >=0.3
docs =
    sphinx >= 7.0
tutorials =
    matplotlib
testing =
    pytest >= 8.0
    pytest-xdist >= 3.5
